Changed dependencies wagtail-seo and wagtail-cache to forked versions, to allow smooth install in Wagtail 4

--- a/cjkcms/templates/cjkcms/widgets/checkbox_classifiers.html
+++ b/cjkcms/templates/cjkcms/widgets/checkbox_classifiers.html
@@ -34,7 +34,7 @@
         </p>
         <div>
             <a class="button bicolor icon icon-plus"
-               href="{% url 'wagtailsnippets:add' 'cjkcms' 'classifier' %}">{% trans "Add Classifier" %}</a>
+               href="{% url 'wagtailsnippets_cjkcms_classifier:add' %}">{% trans "Add Classifier" %}</a>
         </div>
     </div>
 {% endif %}
