--- a/cjkcms/templates/cjkcms/blocks/card_horizontal.html
+++ b/cjkcms/templates/cjkcms/blocks/card_horizontal.html
@@ -3,13 +3,13 @@
 <div class="card mb-3 {{self.settings.custom_css_class}}"
 {% if self.settings.custom_id %}id="{{self.settings.custom_id}}"{% endif %}>
     <div class="row g-0">
-        <div class="col-md-4">
+        <div class="col-md-4 col-lg-2">
             {% if self.image %}
             {% image self.image fill-900x600 as card_img %}
             <img class="card-img-top w-100" src="{{card_img.url}}" alt="{{card_img.title}}">
             {% endif %}
         </div>
-        <div class="col-md-8">
+        <div class="col-md-8 col-lg-10">
             <div class="card-body">
                 {% if self.title %}<h5 class="card-title">{{self.title}}</h5>{% endif %}
                 {% if self.subtitle %}<h6 class="card-subtitle mb-2 text-muted">{{self.subtitle}}</h6>{% endif %}
