--- a/cjkcms/templates/cjkcms/blocks/quote_block.html
+++ b/cjkcms/templates/cjkcms/blocks/quote_block.html
@@ -2,6 +2,6 @@
     <blockquote class="blockquote {{self.settings.custom_css_class}}"
     {% if self.settings.custom_id %}id="{{self.settings.custom_id}}"{% endif %}>
         <p class="mb-0">{{self.text}}</p>
-        {% if self.author %}<footer class="blockquote-footer">{{self.author}}</footer>{% endif %}
+        {% if self.author %}<footer class="blockquote-footer mt-1">{{self.author}}</footer>{% endif %}
     </blockquote>
 {% endblock %}
