--- a/cjkcms/static/cjkcms/css/cjkcms-front.css
+++ b/cjkcms/static/cjkcms/css/cjkcms-front.css
@@ -70,7 +70,7 @@ License: https://github.com/coderedcorp/coderedcms/blob/dev/LICENSE
   background: white;
 }
 
-.leaders span + span {
+.leaders span+span {
   float: right;
   padding-left: 0.33em;
   padding-right: 15px;
@@ -106,7 +106,7 @@ License: https://github.com/coderedcorp/coderedcms/blob/dev/LICENSE
 }
 
 @media (min-width: 768px) {
-  .cjkcms-article > img {
+  .cjkcms-article>img {
     margin-bottom: -40vw;
   }
 }
@@ -257,3 +257,16 @@ License: https://github.com/coderedcorp/coderedcms/blob/dev/LICENSE
   height: 500px;
 }
 
+.responsive-object {
+  position: relative;
+}
+
+.responsive-object iframe,
+.responsive-object object,
+.responsive-object embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
