--- a/cjkcms/templates/cjkcms/blocks/card_landing2.html
+++ b/cjkcms/templates/cjkcms/blocks/card_landing2.html
@@ -1,67 +1,62 @@
 {% load wagtailcore_tags wagtailimages_tags static txtutils_tags %}
 
-  <!-- Section: Landing 1 Card -->
-  <section class="mb-8">
+  <!-- Section: Landing Card Type 2 -->
+  <section class="mb-10 text-center text-md-start {{self.settings.custom_css_class}}" {% if self.settings.custom_id %}id="{{self.settings.custom_id}}"{% endif %}>
+    {% if page.cover_image %}
+    {% image page.cover_image width-1920 as card_img %}
+    {% assign card_img.url as img_url %}
+    {% else %}
+        {% captureas img_url %}{% static 'cjkcms/images/patterns/pattern2.jpg' %}{% endcaptureas %}
+    {% endif %}
 
-    <style>
-      .page-header {
-        padding: 0;
-        position: relative;
-        overflow: hidden;
-        display: flex;
-        align-items: center;
-        background-size: cover;
-        background-position: 50%;
-      }
-      .oblique {
-        transform: skewX(-10deg);
-        overflow: hidden;
-        width: 60%;
-        right: -10rem;
-        border-bottom-left-radius: 0.75rem;
-      }
-      .img-oblique {
-        transform: skewX(10deg);
-      }
-      .img-settings {
-        image-rendering: pixelated;
-        filter: brightness(110%) contrast(110%) saturate(100%);
-      }
-      .fw-900 {
-        font-weight: 900;
-      }
-    </style>
+    <!-- Background image -->
+    <div
+        class="p-5 bg-image"
+        style="
+                background-image: url('{{ img_url }}');
+                background-size: cover;
+                height: 200px;
+                z-index: 0;
+                "
+    ></div>
+    <!-- Background image -->
 
-    <div class="page-header {{self.settings.custom_css_class}}" style="min-height: 45vh;" {% if self.settings.custom_id %}id="{{self.settings.custom_id}}"{% endif %}>
-      <div class="oblique position-absolute top-0 h-100 d-md-block d-none gradient-custom-10">
-        {% if self.image %}
-            {% image self.image fill-900x600 as card_img %}
-            {% assign card_img.url as img_url %}
-        {% else %}
-            {% captureas img_url %}{% static 'cjkcms/images/patterns/pattern2.jpg' %}{% endcaptureas %}
-        {% endif %}
-        <div class="img-oblique position-absolute fixed-top ms-auto h-100 img-settings" style="
-              margin-left: -4.1rem !important;
-              z-index: 0;
-              background-size: cover;
-              background-position: center center;
-              background-image: url('{{ img_url }}');
-            "></div>
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6 col-md-7 d-flex justify-content-center flex-column">
+    {% if self.image %}
+    {% image self.image fill-300x300 as card_img %}
+    {% assign card_img.url as img_url %}
+    {% else %}
+        {% captureas img_url %}{% static 'cjkcms/images/patterns/pattern2.jpg' %}{% endcaptureas %}
+    {% endif %}
+    <div>
+      <div class="container mx-auto">
+        <div class="row d-flex justify-content-center align-items-center mb-4 mb-md-0 pt-4" style="margin-top: -110px; background: none;">
+          <div class="col-4 col-lg-3 col-xl-2" style="z-index:1;">
+            <img
+                 src="{{ img_url }}"
+                 class="rounded-circle float-none float-md-start me-4 mb-3"
+                 alt=""
+                 style="
+                        width: 168px;
+                        border: 4px solid hsl(0, 0%, 98%);
+                        "
+                 />
+          </div>
+          <div class="col-8 col-lg-9 col-xl-10 text-center text-md-start">
             {% if self.title %}
-            <h2 class="lh-1 ls-tight fw-900 mb-1">
+            <h1 class="fw-bold" style="color:#FF7600;">
             {{self.title}}
-            </h2>
+            </h1>
             {% endif %}
             {% if self.subtitle %}
             <h2 class="lh-1 ls-tight fw-900 text-primary mb-4">
               {{self.subtitle}}
             </h2>
             {% endif %}
-            <div class="mt-1 pe-lg-5 me-lg-5 lead fw-normal text-muted">
+          </div>
+        </div>
+        <div class="row d-flex justify-content-center align-items-center">
+          <div class="col-12" style="z-index:1">
+            <div class="fs-5">
               {{self.description | richtext}}
             </div>
             {% if self.links %}
@@ -73,8 +68,11 @@
             {% endif %}
           </div>
         </div>
+
+
+          <!--div class="col-lg-6 col-md-4 mb-4 mb-md-0 text-center text-lg-end" -->
       </div>
     </div>
-
   </section>
-  <!-- End Section: Landing 1 Card -->
+
+  <!-- End Section: Landing Card Type 2 -->
