Fixed  flake8 formatting issue in settings. Fixed missing dark mdb css style

--- a/cjkcms/templates/cjkcms/snippets/frontend_assets.html
+++ b/cjkcms/templates/cjkcms/snippets/frontend_assets.html
@@ -11,7 +11,7 @@
             crossorigin="anonymous">
     {% elif settings.cjkcms.LayoutSettings.frontend_theme == 'mdb.dark' %}
         <link
-            href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css"
+            href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.dark.min.css"
             rel="stylesheet"
             crossorigin="anonymous">
     {% else %}
