--- a/cjkcms/templates/cjkcms/blocks/pricelistitem_block.html
+++ b/cjkcms/templates/cjkcms/blocks/pricelistitem_block.html
@@ -11,6 +11,6 @@
     <div class="col-md-12" style="overflow-x: hidden;">
 {% endif %}
     <strong class="leaders"><span>{{self.name}}</span><span>{{self.price}}</span></strong>
-    <p>{{self.description}}</p>
+    <div>{{self.description}}</div>
     </div>
 </div>
