Fixed modal for image lightboxes. Fixed carousel component

--- a/cjkcms/static/cjkcms/css/cjkcms-front.css
+++ b/cjkcms/static/cjkcms/css/cjkcms-front.css
@@ -270,3 +270,9 @@ License: https://github.com/coderedcorp/coderedcms/blob/dev/LICENSE
   width: 100%;
   height: 100%;
 }
+
+
+.modal {
+  max-width: none;
+  margin: 1.75rem auto;
+}
