Different css styling for  button in admin templates for Wagtail <5 and higher

--- a/cjkcms/static/cjkcms/css/cjkcms-editor.css
+++ b/cjkcms/static/cjkcms/css/cjkcms-editor.css
@@ -1,6 +1,11 @@
+.cjkcms-collapsible4 {
+    padding: 0;
+    margin-top: -38px;
+}
+
 .cjkcms-collapsible {
     padding: 0;
-    margin-top: -40px;
+    margin-top: -20px;
 }
 
 .cjkcms-collapsible .cjkcms-collapsible-target {
