--- a/cjkcms/templates/wagtailadmin/block_forms/base_block_settings_struct.html
+++ b/cjkcms/templates/wagtailadmin/block_forms/base_block_settings_struct.html
@@ -1,6 +1,6 @@
-{% load wagtailadmin_tags  %}
+{% load wagtailadmin_tags wagtailcore_tags %}
 
-<div class="{{ classname }} cjkcms-collapsible collapsed c-sf-container">
+<div class="{{ classname }} collapsed c-sf-container {% if wagtail_version < 5  %}cjkcms-collapsible4{% else %}cjkcms-collapsible{% endif %}">
     <button type="button" class="button button-small">
       <i class="icon icon-fa-cog" aria-hidden="true"></i> Advanced Settings
     </button>
