--- a/cjkcms/templates/cjkcms/widgets/checkbox_classifiers.html
+++ b/cjkcms/templates/cjkcms/widgets/checkbox_classifiers.html
@@ -5,7 +5,7 @@
         {% if group %}
         <div class="field-col col4">
         <ul class="cjkcms-checkbox-group">
-            <li><strong>{{ group }}</strong>
+            <li><label class="w-field__label">{{ group }}</label>
         {% endif %}
         <ul{% if id %} id="{{ id }}_{{ index }}"{% endif %}>
         {% for option in options %}
@@ -16,9 +16,10 @@
         </li></ul></div>
         {% endif %}
         {% if forloop.counter|divisibleby:3 %}
-        <div class="clearfix"></div>
+        <div style="clear:both;"></div>
         {% endif %}
     {% endfor %}
+    <div style="clear:both;"></div>
     </div>
     {% endwith %}
 {% else %}
