--- a/cjkcms/templates/cjkcms/snippets/tracking_g4.html
+++ b/cjkcms/templates/cjkcms/snippets/tracking_g4.html
@@ -10,7 +10,7 @@
 </script>
 
 <script data-cookiecategory="analytics">
-  cr_track_clicks = {{settings.cjkcms.AnalyticsSettings.ga_track_button_clicks|yesno:"true,false"}};
+  cms_track_clicks = {{settings.cjkcms.AnalyticsSettings.ga_track_button_clicks|yesno:"true,false"}};
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
