--- a/cjkcms/templates/cjkcms/blocks/pagelist_block.html
+++ b/cjkcms/templates/cjkcms/blocks/pagelist_block.html
@@ -2,15 +2,13 @@
 {% load wagtailcore_tags %}
 
 {% block block_render %}
-
-<ul>
-    {% for page in pages %}
+<div class="row">
+  {% for page in pages %}
+  <div class="col-sm-6 col-lg-4">
     {% with page=page.specific %}
-    <li><a href="{% pageurl page %}">
-        {{page.title}} {% if self.show_preview %}<small class="text-muted">– {{page.body_preview}}</small>{% endif %}
-    </a></li>
+    {% include page.miniview_template %}
     {% endwith %}
-    {% endfor %}
-</ul>
-
+  </div>
+  {% endfor %}
+</div>
 {% endblock %}
