--- a/cjkcms/templates/cjkcms/blocks/pagepreview_block.html
+++ b/cjkcms/templates/cjkcms/blocks/pagepreview_block.html
@@ -1,12 +1,7 @@
 {% extends 'cjkcms/blocks/base_block.html' %}
 {% load wagtailcore_tags %}
-
 {% block block_render %}
-
-    {% with page=self.page.specific %}
-    <a href="{% pageurl page %}">
-        {{page.title}} <small class="text-muted">– {{page.body_preview}}</small>
-    </a>
-    {% endwith %}
-
+{% with page=self.page.specific %}
+{% include page.miniview_template %}
+{% endwith %}
 {% endblock %}
