--- a/cjkcms/templates/cjkcms/blocks/pagelist_block.html
+++ b/cjkcms/templates/cjkcms/blocks/pagelist_block.html
@@ -3,8 +3,9 @@
 
 {% block block_render %}
 <div class="row">
+  {% if self.title %}
   <h3>{{ self.title }}</h3>
-
+  {% endif %}
   {% if self.show_preview %}
 
   {% for page in pages %}
