--- a/cjkcms/templates/cjkcms/snippets/navbar.html
+++ b/cjkcms/templates/cjkcms/snippets/navbar.html
@@ -41,6 +41,10 @@
         {% endif %}
       {% endfor %}
 
+      {% if settings.cjkcms.SocialMediaSettings.location == "menu" %}
+        {% include_block 'cjkcms/snippets/social_media_nav_block.html' with navbar_custom_css_class="{{navbar.custom_css_class}}" %}
+      {% endif %}
+
       {% if settings.cjkcms.LayoutSettings.navbar_langselector %}
         {% include settings.cjkcms.LayoutSettings.navbar_langselector %}
       {% endif %}
