Fixed error in social media links

--- a/cjkcms/templates/cjkcms/snippets/social_media_icons.html
+++ b/cjkcms/templates/cjkcms/snippets/social_media_icons.html
@@ -2,49 +2,49 @@
     <!-- Scial media icons -->
     {% if settings.cjkcms.SocialMediaSettings.facebook %}
     <li class="nav-item me-3 me-lg-0">
-        <a class="nav-link" href="{{ settings.cjkcms.SocialMediaSettings.facebook }}">
+        <a class="nav-link" href="{{ settings.cjkcms.SocialMediaSettings.facebook }}" target="_blank">
             <i class="fab fa-facebook-f"></i>
         </a>
     </li>
     {% endif %}
     {% if settings.cjkcms.SocialMediaSettings.instagram %}
     <li class="nav-item me-3 me-lg-0">
-        <a class="nav-link" href="{{ settings.cjkcms.SocialMediaSettings.instagram }}">
+        <a class="nav-link" href="{{ settings.cjkcms.SocialMediaSettings.instagram }}" target="_blank">
             <i class="fab fa-instagram"></i>
         </a>
     </li>
     {% endif %}
     {% if settings.cjkcms.SocialMediaSettings.linkedin %}
     <li class="nav-item me-3 me-lg-0">
-        <a class="nav-link" href="{{ settings.cjkcms.SocialMediaSettings.linkedin }}">
+        <a class="nav-link" href="{{ settings.cjkcms.SocialMediaSettings.linkedin }}" target="_blank">
             <i class="fab fa-linkedin"></i>
         </a>
     </li>
     {% endif %}
     {% if settings.cjkcms.SocialMediaSettings.github %}
     <li class="nav-item me-3 me-lg-0">
-        <a class="nav-link" href="{{ settings.cjkcms.SocialMediaSettings.github }}">
+        <a class="nav-link" href="{{ settings.cjkcms.SocialMediaSettings.github }}" target="_blank">
             <i class="fab fa-github"></i>
         </a>
     </li>
     {% endif %}
     {% if settings.cjkcms.SocialMediaSettings.twitter %}
     <li class="nav-item me-3 me-lg-0">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="{{ settings.cjkcms.SocialMediaSettings.twitter }}" target="_blank">
             <i class="fab fa-twitter"></i>
         </a>
     </li>
     {% endif %}
     {% if settings.cjkcms.SocialMediaSettings.youtube %}
     <li class="nav-item me-3 me-lg-0">
-        <a class="nav-link" href="{{ settings.cjkcms.SocialMediaSettings.youtube }}">
+        <a class="nav-link" href="{{ settings.cjkcms.SocialMediaSettings.youtube }}" target="_blank">
             <i class="fab fa-youtube"></i>
         </a>
     </li>
     {% endif %}
     {% if settings.cjkcms.SocialMediaSettings.pinterest %}
     <li class="nav-item me-3 me-lg-0">
-        <a class="nav-link" href="{{ settings.cjkcms.SocialMediaSettings.pinterest }}">
+        <a class="nav-link" href="{{ settings.cjkcms.SocialMediaSettings.pinterest }}" target="_blank">
             <i class="fab fa-pinterest"></i>
         </a>
     </li>
