New template snippet: actionbar.html.

--- a/cjkcms/templates/cjkcms/pages/base.html
+++ b/cjkcms/templates/cjkcms/pages/base.html
@@ -78,6 +78,8 @@
 
         {% block navbar %}{% endblock %}
 
+        {% block actionbar %}{% endblock %}
+
         <div id="content">
             {% block content %}
                 {% block messages %}
