--- a/cjkcms/templates/cjkcms/pages/web_page_notitle.html
+++ b/cjkcms/templates/cjkcms/pages/web_page_notitle.html
@@ -4,6 +4,10 @@
     {% include 'cjkcms/snippets/navbar.html' %}
 {% endblock %}
 
+{% block actionbar %}
+    {% include 'cjkcms/snippets/actionbar.html' %}
+{% endblock %}
+
 {% block footer %}
 {% include 'cjkcms/snippets/footer.html' %}
 {% endblock %}
