Template and static files changes to add support for breadcrumbs

--- a/cjkcms/templates/cjkcms/pages/base.html
+++ b/cjkcms/templates/cjkcms/pages/base.html
@@ -91,6 +91,11 @@
                         </div>
                     {% endif %}
                 {% endblock %}
+
+                {% if settings.cjkcms.LayoutSettings.breadcrumbs %}
+                {% block breadcrumbs %}{% endblock %}
+                {% endif %}
+
                 {% block content_pre_body %}{% endblock %}
 
                 {% block content_body %}
