--- a/cjkcms/templates/cjkcms/pages/web_page_notitle.html
+++ b/cjkcms/templates/cjkcms/pages/web_page_notitle.html
@@ -8,6 +8,10 @@
     {% include 'cjkcms/snippets/actionbar.html' %}
 {% endblock %}
 
+{% block breadcrumbs %}
+{% include 'cjkcms/snippets/breadcrumbs.html' %}
+{% endblock %}
+
 {% block footer %}
 {% include 'cjkcms/snippets/footer.html' %}
 {% endblock %}
