Fixed full page search. Updates to search layout css and templates

--- a/cjkcms/static/cjkcms/css/cjkcms-front.css
+++ b/cjkcms/static/cjkcms/css/cjkcms-front.css
@@ -297,4 +297,5 @@ License: https://github.com/coderedcorp/coderedcms/blob/dev/LICENSE
 #id_s {
   margin-bottom: 0;
   margin-top: 0;
+  border: gray 1px solid;
 }
