--- a/cjkcms/templates/cjkcms/pages/search.html
+++ b/cjkcms/templates/cjkcms/pages/search.html
@@ -24,7 +24,7 @@
         <form class="mt-5" action="{% url 'cjkcms_search' %}" method="GET">
             <div class="row">
                 <div class="col-sm-9">
-                    {% bootstrap_form form size='large' layout='inline' %}
+                    {% bootstrap_form form size='lg' layout='inline' %}
                 </div>
                 <div class="col-sm-3">
                     <div class="form-group">
@@ -46,7 +46,7 @@
                 {% for pt in pagetypes %}
                 <li class="nav-item">
                     {% query_update qs_nop 't' pt.content_type.model as qs_t %}
-                    <a class="nav-link {% if form.t.value == pt.content_type.model %}active{% endif %}" href="?{{qs_t.urlencode}}">{{pt.search_name_plural}}</a>
+                    <a class="nav-link {% if form.t.value == pt.content_type.model %}active{% endif %}" href="?{{qs_t.urlencode}}">{{pt|get_plural_name_of_class}}</a>
                 </li>
                 {% endfor %}
             </ul>
