Updates to webpack project template

--- a/cjkcms/project_template/webpack/frontend/src/styles/index.scss
+++ b/cjkcms/project_template/webpack/frontend/src/styles/index.scss
@@ -1,7 +1,7 @@
 // If you comment out code below, bootstrap will use red as primary color
 // and btn-primary will become red
 
-$primary: rgb(136, 64, 0);
+$primary: rgb(136 64 0);
 
 // for Standard Bootstrap 5.x:
 // @import "~bootstrap/scss/bootstrap.scss";
